<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">极趣VR助手</string>
    
    <!-- 首页底部五个文字 -->
    <string name="recomendTx">推荐</string>
    <string name="informationTx">资讯</string>
    <string name="gameTx">游戏</string>
    <string name="evaluationTx">测评</string>
    <string name="toolTx">工具</string>
    <string name="login">登录</string>
    <string name="forgetPassword">忘记密码</string>
    <string name="separator">|</string>
    <string name="registered">立即注册</string>
    <string name="nickname">昵称</string>
    <string name="gender">性别</string>
    <string name="birthday">生日</string>
    <string name="qq">QQ号码</string>
    <string name="phoneNumber">电话号码</string>
    <string name="phone">电话</string>
    <string name="email">邮箱</string>
    <string name="modify">修改</string>
    <string name="logout">退出登录</string>
    <string name="welcomeUseVR">欢迎使用都玩VR助手</string>
    <string name="headlineTx">最新头条</string>
    <string name="more">更多</string>
    <string name="explosiveHeadlines">最爆头条</string>
    <string name="allHeadlines">全部资讯</string>
    <string name="zhuanti">专题</string>
    <string name="toolTopTitle">都玩VR助手</string>
    <string name="toolDownload">下载管理</string>
    <string name="toolResources">资源管理</string>
    <string name="toolUninstall">应用卸载</string>
    <string name="toolClearCache">清理缓存</string>
    <string name="toolClearUp">清理加速</string>
    <string name="toolCommonProblem">常见问题</string>
    <string name="toolFeedback">用户反馈</string>
    <string name="toolShare">好友分享</string>
    <string name="toolAbout">关于我们</string>
    <string name="toolPower">电量管理</string>
    <string name="loginTopTip">都玩VR助手登录</string>
    <string name="registerTop">都玩VR助手注册</string>
    <string name="inputEmail">请输入邮箱</string>
    <string name="code">验证码</string>
    <string name="getCodes">获取验证码</string>
    <string name="password">密码</string>
    <string name="account">账号</string>
    <string name="confirmPassword">确认密码</string>
    <string name="commit">提交</string>
    <string name="sendCodeAgain">秒后重新发送</string>
    <string name="setPasswordAgain">重设密码</string>
    <string name="man">男</string>
    <string name="female">女</string>
    <string name="register">注册</string>
    <string name="memberInformation">会员资料</string>
    <string name="setting">设置</string>
    <string name="changeThreadPool">同时下载数量</string>
    <string name="loadLargImg">大图加载（游戏截图、文章图片）</string>
    <string name="autoCheckVersion">自动检查新版本更新</string>
    <string name="checkVersion">检查更新</string>
    <string name="modifyPassword">修改密码</string>
    <string name="loginOut">退出登录</string>
    <string name="notic">通知</string>
    <string name="privateLetter">私信</string>
    <string name="messageCenter">消息中心</string>
    <string name="gameEvaluation">游戏测评</string>
    <string name="accountIsNull">帐号不能为空</string>
    <string name="accountIsTooLong">帐号过长</string>
    <string name="accountExist">用户名已经存在</string>
    <string name="accountNotExist">用户不存在</string>
    <string name="emailIsNull">邮箱不能为空</string>
    <string name="emailError">错误的邮箱格式</string>
    <string name="emailExist">邮箱已注册</string>
    <string name="passwordIsNull">密码不能为空</string>
    <string name="passwordWrong">密码错误</string>
    <string name="confirmPasswordIsNull">两次密码不一致</string>
    <string name="registerFailed">注册失败</string>
    <string name="registering">正在注册</string>
    <string name="registerSuccess">注册成功</string>
    <string name="loginFailed">登录失败</string>
    <string name="longinSuccess">登陆成功</string>
    <string name="loging">正在登录</string>
    <string name="modifyCommit">提交</string>
    <string name="modifyCommiting">正在修改</string>
    <string name="modifyFailed">修改失败</string>
    <string name="modifySuccess">修改成功</string>
    <string name="modifyAccountNotExist">用户不存在</string>
    <string name="modifing">正在修改</string>
    <string name="getCodeFaile">获取验证码失败</string>
    <string name="getCoding">正在获取验证码</string>
    <string name="resetingPassword">正在重置密码</string>
    <string name="resetSuccess">重置成功</string>
    <string name="codeIsNull">验证码不能为空</string>
    <string name="resetFailed">重置失败</string>
    <string name="codeWrong">验证码错误</string>
    <string name="codeTimeOut">验证超时</string>
    <string name="notLogin">未登录</string>
    
    <string name="screenSense">画面感  : </string>
    <string name="immersion">沉浸感  : </string>
    <string name="gameplay">游戏性  : </string>
    <string name="difficultyNumber">难度数  : </string>
    <string name="vertigo">眩晕感  :</string>
    <string name="comprehensive">综合评定</string>
    <string name="evaluationDetailed">详细测评</string>
    <string name="downloadNow">立刻下载</string>
    <string name="deleteDialogue">删除对话</string>
    <string name="shieldMsg">屏蔽私信</string>
    <string name="intoBlacklist">加入黑名单</string>
    <string name="personalAPP">个人应用</string>
    <string name="systemAPP">系统应用</string>
    <string name="allStart">全部开始</string>
    <string name="allUninstall">全部卸载</string>
    <string name="appuninstall">应用卸载</string>
    <string name="downloading">正在下载</string>
    <string name="nodownload">什么都没有哟~</string>
    <string name="downloaded">已下载</string>
    <string name="allDelete">全部删除</string>
    <string name="downloadManager">下载管理</string>
    <string name="loginTip">嬷嬷哒~要登录才能查看信息的哟~</string>
    <string name="downloadWithNotWifiTip">wifi已断开，是否继续下载</string>
    <string name="continueDownload">继续</string>
    <string name="stopDownload">不了</string>
    <string name="cancle">取消</string>
    <string name="quickLogin">快捷登录</string>
    <string name="appCache">软件缓存</string>
    <string name="systemCache">系统缓存</string>
    <string name="clearCache">清理缓存</string>
    <string name="clearCacheIng">正在清理缓存</string>
    <string name="clearCacheed">清理完成</string>
    <string name="cleared">完成</string>
    <string name="deepClear">深度清洁</string>
    <string name="startScan">开始清理</string>
    <string name="deepClearing">正在清理</string>
    <string name="deepCleared">清理完成</string>
    <string name="scaning">正在扫描</string>
    <string name="scaned">扫描完成</string>
    <string name="close_background_process">关闭后台应用</string>
    <string name="clear_rubish">清理垃圾</string>
    <string name="auto_start">后台自启应用</string>
    <string name="speed_up">加速</string>
    
    <string name="batteryManager">电量管理</string>
    <string name="saveBattery">开启省电模式</string>
    <string name="batteryPrec">电池百分比</string>
    
    <string name="commomProblem">常见问题</string>
    <string name="support">帮助</string>
    <string name="feedback">用户反馈</string>
    
    <string name="aboutUs">关于我们</string>
    <string name="appName">都玩VR助手</string>
    <string name="copyrightInfo">版权信息：</string>
    <string name="releaseDate">发布日期：</string>
    <string name="officialWebsite">官方网址：</string>
    <string name="officialWeibo">官方微博：</string>
    <string name="noPublic">公众号</string>
    
    <string name="resourceManagement">资源管理</string>
    
    <string name="friendShare">好友分享</string>
    <string name="contacts">通信录分享</string>
    <string name="qqShare">分享给QQ好友</string>
    <string name="weixinShare">分享给微信好友</string>
    <string name="weiboShare">分享到微博</string>
    <string name="pengyouquanShare">分享到朋友圈</string>
    <string name="inviteTip">邀请周围好友</string>
    
    <string name="sort">分类</string>
    <string name="rank">排行</string>
    <string name="favorableComment">好评榜</string>
    <string name="hot">最热榜</string>
    <string name="boutiqueTitle">都玩VR助手精选游戏</string>
    <string name="thematic">专题</string>
    <string name="leftBrackets">(</string>
    <string name="rightBrackets">)</string>
    <string name="newHeadlines">最新头条</string>
    <string name="newGameList">新游榜</string>
    <string name="popularGameList">热游榜</string>
    <string name="willGameList">必玩榜</string>
    
    <string name="latestGame">最新游戏</string>
    <string name="newGame">最热游戏</string>
    
    <string name="headControl">头控</string>
    <string name="handle">手柄</string>
    <string name="low">L</string>
    <string name="hight">H</string>
    <string name="gameIntroductionTitle">游戏介绍</string>
    <string name="download">下载</string>
    
    <string name="hasNotGames">没有相关游戏</string>
    
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">数据加载失败</string>
    <string name="load_again">刷新看看</string>
    <string name="loadingData">正在努力加载ing</string>
    <string name="notMore">到底啦 ！</string>
    
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="check_net_error">"网络连接出错"</string>
    
    <string name="app_state_download">下载</string>
    <string name="app_state_paused">暂停</string>
    <string name="app_state_error">失败</string>
    <string name="app_state_waiting">等待</string>
    <string name="app_state_downloaded">安装</string>
    
    <string name="file_path">multidownload</string>
    <string name="image_data">imageData</string>
    
    <string name="refresh_normal">normal</string>
    <string name="refresh_cpu">cpu</string>
    <string name="power_screen">显示屏</string>
    <string name="power_wifi">Wi-Fi</string>
    <string name="power_bluetooth">蓝牙</string>
    <string name="power_cell">手机信号</string>
    <string name="power_phone">语音通话</string>
    <string name="power_idle">手机待机</string>
    <string name="process_kernel_label">Android OS</string>
    <string name="process_mediaserver_label">媒体服务器</string>
    <string name="battery_history_days"><xliff:g id="DAYS">%1$d</xliff:g> 天 <xliff:g id="HOURS">%2$d</xliff:g> 小时 <xliff:g id="MINUTES">%3$d</xliff:g> 分 <xliff:g id="SECONDS">%4$d</xliff:g> 秒</string>
    <string name="battery_history_hours"><xliff:g id="HOURS">%1$d</xliff:g> 小时 <xliff:g id="MINUTES">%2$d</xliff:g> 分 <xliff:g id="SECONDS">%3$d</xliff:g> 秒</string>
    <string name="battery_history_minutes"><xliff:g id="MINUTES">%1$d</xliff:g> 分 <xliff:g id="SECONDS">%2$d</xliff:g> 秒</string>
    <string name="battery_history_seconds"><xliff:g id="SECONDS">%1$d</xliff:g> 秒</string>
    <string name="battery_info_status_charging_ac">（交流电）</string>
    <string name="battery_info_status_charging_usb">(USB)</string>
    <string name="battery_info_status_discharging">正在耗电</string>
    <string name="battery_info_status_not_charging">未在充电</string>
    <string name="battery_info_status_full">电量充足</string>
    <string name="battery_info_status_unknown">未知</string>
    <string name="battery_info_status_charging">正在充电</string>
    <string name="power_usage_level_and_status"><xliff:g id="LEVEL">%1$s</xliff:g> - <xliff:g id="STATUS">%2$s</xliff:g></string>
    
</resources>
