<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent" 
    android:gravity="center"
    android:background="@drawable/xiala_bg">
    
    <Button 
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@drawable/msg_pop_item_sel"
        android:text="@string/deleteDialogue"
		android:background="@color/transparent"/>
    
    <Button 
        android:id="@+id/shield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/delete"
        android:textColor="@drawable/msg_pop_item_sel"
        android:text="@string/shieldMsg"
		android:background="@color/transparent"/>
    
    <Button 
        android:id="@+id/blacklist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/shield"
        android:textColor="@drawable/msg_pop_item_sel"
        android:text="@string/intoBlacklist"
		android:background="@color/transparent"/>

</RelativeLayout>
