<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"  
    android:background="@color/bottomBgColor">
    
    <LinearLayout 
        android:id="@+id/loadRel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">
        
        <ImageView
            android:id="@+id/loadingImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/loading_anim"/>
        
        <TextView
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:text="@string/loadingData"
			android:textColor="@color/itemColor"/>
    </LinearLayout>
    
	
    <RelativeLayout 
        android:id="@+id/loadAgainRel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone">
        
        <ImageView
            android:id="@+id/loadImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/load_fail"
            android:layout_centerHorizontal="true"/>
        
        <TextView 
            android:id="@+id/loadFailTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/loadImg"
            android:text="@string/load_fail"
			android:textColor="@color/itemColor"/>
        
	    <Button
	        android:id="@+id/loadAgain"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        android:layout_below="@id/loadFailTip"
	        android:text="@string/load_again"
	        android:textColor="@color/white"
	        android:background="@drawable/load_again"/>
    </RelativeLayout>

</RelativeLayout>
