<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/toolbg">
    
    <com.jiqu.view.TitleView
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    
	<EditText 
	    android:id="@+id/account"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:background="@drawable/ziliao2"
	    android:layout_centerHorizontal="true"
	    android:singleLine="true"
	    android:textColor="@color/white"
	    android:hint="@string/inputEmail"
	    android:textColorHint="@color/white"
	    android:paddingLeft="3dp"
	    android:paddingRight="3dp"/>
	
	<RelativeLayout 
	    android:id="@+id/codesLin"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@id/account"
	    android:layout_alignRight="@id/account"
	    android:layout_below="@id/account"
	    android:background="@drawable/ziliao2">
	    
	    <Button 
	        android:id="@+id/getCodes"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_centerVertical="true"
	        android:background="@color/transparent"
	        android:text="@string/getCodes"
	        android:layout_marginRight="3dp"
	        android:textColor="@color/informationListGameColor"/>
	    
	    <EditText 
	        android:id="@+id/codesEd"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_toLeftOf="@id/getCodes"
	        android:background="@color/transparent"
	        android:textColor="@color/white"
	        android:singleLine="true"
	        android:maxLength="10"
	        android:hint="@string/code"
	        android:textColorHint="@color/white"
	    	android:layout_marginLeft="3dp"
	    	android:layout_marginRight="3dp"/>
	    
	</RelativeLayout>
	
	<TextView 
	    android:id="@+id/timeCount"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignRight="@id/codesLin"
	    android:layout_below="@id/codesLin"
	    android:layout_marginRight="3dp"
	    android:textColor="@color/itemDesColor"/>
	
	<com.jiqu.view.PasswordView
        android:id="@+id/inputPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ziliao2"
        android:layout_alignLeft="@id/codesLin"
	    android:layout_alignRight="@id/codesLin"
	    android:layout_below="@id/codesLin"/>
	
	<com.jiqu.view.PasswordView
	    android:id="@+id/confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ziliao2"
        android:layout_alignLeft="@id/inputPassword"
	    android:layout_alignRight="@id/inputPassword"
	    android:layout_below="@id/inputPassword"/>
	
	<Button 
	    android:id="@+id/commit"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@id/inputPassword"
	    android:layout_alignRight="@id/inputPassword"
	    android:layout_below="@id/confirmPassword"
	    android:background="@drawable/denglu"
	    android:text="@string/commit"
	    android:textColor="@color/white"/>
</RelativeLayout>
