<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:ignore="MissingPrefix" >

    <RelativeLayout
        android:id="@+id/parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/tanchuang" >

        <TextView
            android:id="@+id/tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            fontPath="fonts/lantinghei.ttf"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/downloadWithNotWifiTip"
            android:textColor="@color/blue" />

        <RelativeLayout
            android:id="@+id/btnRel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" >

            <Button
                android:id="@+id/cancle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                fontPath="fonts/lantinghei.ttf"
                android:background="@drawable/quxiao_dialog"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/continueDownload"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/cancle"
                android:layout_alignTop="@id/cancle"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/cancle"
                fontPath="fonts/lantinghei.ttf"
                android:background="@drawable/denglu_dialog"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/stopDownload"
                android:textColor="@color/white" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>